dark mode support + bg svg fill fixes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import "globals";
 
+:root {
+  color-scheme: light dark;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -14,11 +18,6 @@ body {
   background-size: cover;
   min-height: 100vh;
   font-family: "Lato", sans-serif;
-  text-shadow:
-    -1px -1px 0 white,
-    1px -1px 0 white,
-    -1px 1px 0 white,
-    1px 1px 0 white;
   font-size: 1.1em;
   margin: 0;
 }
